# Fantasy-Football-Manager

./: .gitignore  Makefile  README.md  configuration.md  contribution.md  design-notes.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
apis/: engine.openapi.yaml  oapi-codegen.yaml
apps/engine-py/: app.py  config.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  routes_compute.py  routes_health.py  routes_ingest.py  routes_jobs.py  routes_lineup.py  routes_players.py  routes_recommend.py  routes_sources.py  routes_sync_espn.py  routes_teams.py  seed.py
apps/engine-py/adapters/espn/: client.py  sync.py
apps/engine-py/alembic/: env.py
apps/engine-py/alembic/versions/: 0b741b05a9ef_init_schema.py  9ca5bd148f24_init_schema.py  c50e7ff29817_init_schema.py  dde58d8d1346_init_schema.py
apps/engine-py/db/: db.py  models.py  session.py
apps/engine-py/jobs/: queue.py  scheduler.py  tasks.py
apps/engine-py/services/: lineup.py  mock_data.py  recommend_fa.py  recommend_trade.py  store.py  team_score.py  valuation.py
apps/engine-py/services/projections/: base.py  mock.py  registry.py
apps/web-go/: go.mod
apps/web-go/cmd/web/: main.go
apps/web-go/internal/engine/: engine_client.go
apps/web-go/internal/http/: routes.go
apps/web-go/internal/http/handlers/: free_agents.go  health.go  root.go
infra/: compose.yaml
infra/engine/: engine.Dockerfile  web.Dockerfile
migrations/: .gitkeep
scripts/: .gitkeep
seeds/: .gitkeep
