[tool.poetry]
name = "engine"
version = "0.1.0"
description = "FantasyManager engine"
authors = ["you <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.8.0"
sqlalchemy = ">=2.0"
psycopg2-binary = "^2.9.9"
psycopg = {version = ">=3.2", extras = ["binary"]}
alembic = "^1.16.5"
pydantic-settings = "^2.10.1"
espn-api = "^0.45.1"
python-dotenv = "^1.1.1"
apscheduler = "^3.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"
